tests/ui/structure/09_macro_type.stderr
error: mapping over macro in type position is not supported
  --> tests/ui/structure/09_macro_type.rs:10:16
   |
10 | struct Test<T>(test_type!());
   |                ^^^^^^^^^^^^
